Allow HistoricalData to be instantiated without initial value